Fixed the issue that the invalid API key dialog would display when there is no Internet. Now the updater throws custom exceptions when there are issues like no Internet and invalid API keys.